--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ selenium = "^4.16.0"
 robotframework = "^6.1.1"
 robotframework-seleniumlibrary = "^6.2.0"
 webdriver-manager = "^4.0.1"
+robotframework-selenium2library = "^3.0.0"
 
 
 [build-system]
